# splash-terminal

./: LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  OfferTable.tsx  SubmitOfferDialog.tsx
